-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0 Alpha
-
None
-
eb002cf0 (qttools)
Given the following input:
.qdocconf:
macro.foo.HTML ="\1 \2"
.qdoc:
\foo bar baz
Makes qdoc crash (QList: index out of range).
For Gerrit Dashboard: QTBUG-49608 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
141854,2 | qdoc: Fix crash with multiple macro parameters | 5.6 | qt/qttools | Status: MERGED | +2 | 0 |