qdoc: Fix crash with multiple macro parameters

When the number of parameters expected by a macro definition does not
match what's passed to the macro invocation, store the number of
parameters read so far. This prevents a crash by out-of-range
index reference.

Also, improve the documentation on macro parameters.

Change-Id: I75716f5b53f394664bb509c96aa4b53b4efba222
Task-number: QTBUG-49608
Reviewed-by: Martin Smith <martin.smith@theqtcompany.com>